--- a/public-html/index.html
+++ b/public-html/index.html
@@ -22,7 +22,7 @@
         #floating-svg {
             position: absolute;
 			width: 600px;
-			height: unset:
+			height: unset;
         }
     </style>
 </head>
